--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <meta property="og:title" content="AliensToday — Daily Alien & UFO News">
 <meta property="og:description" content="Your daily source for alien and UFO news. MUFON reports, Pentagon updates, sighting alerts, and expert analysis. Updated every hour.">
 <meta property="og:site_name" content="AliensToday">
-<meta property="og:image" content="https://aliens.today/og-image.png">
+<meta property="og:image" content="https://aliens.today/og-image.svg">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@SpunkArt13">
-<meta name="twitter:title" content="AliensToday — Daily Alien & UFO News">
+<meta name="twitter:title" content="aliens.today">
 <meta name="twitter:description" content="Your daily source for alien and UFO news. MUFON reports, Pentagon updates, sighting alerts, and expert analysis. Updated every hour.">
-<meta name="twitter:image" content="https://aliens.today/og.svg">
+<meta name="twitter:image" content="https://aliens.today/og-image.svg">
 <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https:; img-src 'self' data: https:; connect-src 'self' https:; frame-src https:;">
 <meta name="referrer" content="strict-origin-when-cross-origin">
-<link rel="icon" href="data:image/svg+xml,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><ellipse cx="50" cy="40" rx="30" ry="35" fill="%23ff6a00" opacity="0.9"/><ellipse cx="50" cy="70" rx="12" ry="18" fill="%23ff6a00" opacity="0.9"/><ellipse cx="37" cy="38" rx="10" ry="14" fill="%23050508" transform="rotate(-10 37 38)"/><ellipse cx="63" cy="38" rx="10" ry="14" fill="%23050508" transform="rotate(10 63 38)"/><ellipse cx="50" cy="58" rx="2" ry="1" fill="%23050508"/><path d="M44 65 Q50 70 56 65" stroke="%23050508" stroke-width="1.5" fill="none"/></svg>">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>👽</text></svg>">
 <link rel="dns-prefetch" href="https://www.googletagmanager.com">
 <link rel="dns-prefetch" href="https://www.reddit.com">
 <script type="application/ld+json">
@@ -544,7 +544,7 @@ body{overflow-x:hidden}
 
 <div class="aff-banner"><div class="aff-banner-inner" style="background:linear-gradient(135deg,#ff990015,var(--card));border-color:#ff990040">
 <div class="aff-banner-text"><h4 style="color:#ff9900">UFO Books on Amazon</h4><p>Best-selling UFO research</p></div>
-<a href="https://amazon.com/?tag=spunkart-20" target="_blank" data-aff="amazon" class="aff-banner-btn" style="background:#ff9900">Browse Books &rarr;</a>
+<a href="https://amazon.com/?tag=spunk01-20" target="_blank" data-aff="amazon" class="aff-banner-btn" style="background:#ff9900">Browse Books &rarr;</a>
 </div></div>
 
 <!-- FAQ -->
@@ -666,7 +666,7 @@ body{overflow-x:hidden}
 <h3 style="font-size:22px;font-weight:800;margin-bottom:8px">Explore the Unknown</h3>
 <p style="color:var(--dim);font-size:14px;margin-bottom:20px">Tools, data, and community for alien and UFO enthusiasts.</p>
 <div class="inline-cta-buttons" style="display:flex;flex-wrap:wrap;justify-content:center;gap:12px">
-<a href="https://amazon.com/?tag=spunkart-20" target="_blank" data-aff="amazon" style="display:inline-flex;align-items:center;gap:8px;padding:12px 28px;background:#ff9900;color:white;border-radius:var(--radius);font-weight:700;font-size:14px">Shop Alien Gear &rarr;</a>
+<a href="https://amazon.com/?tag=spunk01-20" target="_blank" data-aff="amazon" style="display:inline-flex;align-items:center;gap:8px;padding:12px 28px;background:#ff9900;color:white;border-radius:var(--radius);font-weight:700;font-size:14px">Shop Alien Gear &rarr;</a>
 <a href="https://customgpt.ai/?fpr=spunk" target="_blank" data-aff="customgpt" style="display:inline-flex;align-items:center;gap:8px;padding:12px 28px;background:#06b6d4;color:white;border-radius:var(--radius);font-weight:700;font-size:14px">Try AI Tools &rarr;</a>
 
 </div>
@@ -676,7 +676,7 @@ body{overflow-x:hidden}
 <div class="affiliate-bar">
 <h4>Our Partners</h4>
 <div class="affiliate-links">
-<a href="https://amazon.com/?tag=spunkart-20" target="_blank" data-aff="amazon" style="border-color:#ff9900;color:#ff9900">Amazon</a>
+<a href="https://amazon.com/?tag=spunk01-20" target="_blank" data-aff="amazon" style="border-color:#ff9900;color:#ff9900">Amazon</a>
 <a href="https://customgpt.ai/?fpr=spunk" target="_blank" data-aff="customgpt" style="border-color:#06b6d4;color:#06b6d4">CustomGPT</a>
 <a href="https://coinbase.com/join/YAGES3X" target="_blank" data-aff="coinbase" style="border-color:#0052ff;color:#0052ff">Coinbase</a>
 
@@ -752,7 +752,10 @@ body{overflow-x:hidden}
 <a href="https://kalshi.com/sign-up/?referral=6b72a842-a7f3-46b2-b8f4-2e3e8b498712" target="_blank" data-aff="kalshi">Kalshi</a>
 <a href="https://customgpt.ai/?fpr=spunk" target="_blank" data-aff="customgpt">CustomGPT</a>
 <a href="https://everyx.io/register?ref=AYHl" target="_blank" data-aff="everyx">EveryX</a>
-<a href="https://amazon.com/?tag=spunkart-20" target="_blank" data-aff="amazon">Amazon</a>
+<a href="https://amazon.com/?tag=spunk01-20" target="_blank" data-aff="amazon">Amazon</a>
+<a href="https://www.amazon.com/s?k=telescope&tag=spunk01-20" target="_blank" data-aff="amazon">Telescopes</a>
+<a href="https://www.amazon.com/s?k=ufo+books&tag=spunk01-20" target="_blank" data-aff="amazon">UFO Books</a>
+<a href="https://www.amazon.com/s?k=alien+merchandise&tag=spunk01-20" target="_blank" data-aff="amazon">Space Merch</a>
 
 </div>
 <div class="footer-col">
