Reorder network links by popularity

--- a/blog-ufo-sightings-2026.html
+++ b/blog-ufo-sightings-2026.html
@@ -262,7 +262,7 @@
   </div>
 
   <p style="margin-top:2rem;font-size:0.85rem;color:var(--dim);">
-    <em>Further reading: For books on the UAP topic, check out titles by Leslie Kean, Ross Coulthart, and Garrett Graff available on <a href="https://www.amazon.com/s?k=UAP+UFO+books&tag=spunkart-20" target="_blank" rel="noopener noreferrer nofollow">Amazon</a>.</em>
+    <em>Further reading: For books on the UAP topic, check out titles by Leslie Kean, Ross Coulthart, and Garrett Graff available on <a href="https://www.amazon.com/s?k=UAP+UFO+books&tag=spunk01-20" target="_blank" rel="noopener noreferrer nofollow">Amazon</a>.</em>
   </p>
 </article>
 
