--- a/blog-ufo-sightings-2026.html
+++ b/blog-ufo-sightings-2026.html
@@ -268,7 +268,7 @@
 
 <footer>
   <p>&copy; 2026 <a href="https://aliens.today/">AliensToday</a> &mdash; Your daily source for alien and UFO news</p>
-  <p style="margin-top:0.5rem;"><a href="https://spunkart.com" target="_blank">SpunkArt.com</a> &middot; <a href="https://x.com/SpunkArt13" target="_blank">@SpunkArt13</a></p>
+  <p style="margin-top:0.5rem;"><a href="https://spunk.codes" target="_blank">SpunkArt.com</a> &middot; <a href="https://x.com/SpunkArt13" target="_blank">@SpunkArt13</a></p>
 </footer>
 </body>
 </html>
